--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,7 @@ body {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
+h1,
+h2 {
+  text-align: center;
+}
