--- a/src/styles.css
+++ b/src/styles.css
@@ -31,7 +31,7 @@ body {
 }
 .hero h3 {
   font-size: 15px;
-  letter-spacing: 1.5em;
+  letter-spacing: 1em;
 }
 .hero a {
   background-color: white;
@@ -43,5 +43,55 @@ body {
   font-weight: 500;
 }
 footer {
-  text-align: center;
+  background-image: linear-gradient(
+      rgba(20, 40, 80, 0.9),
+      rgba(20, 40, 80, 0.9)
+    ),
+    url("../src/images/horizonofmarbella.jpg");
+  background-position: bottom;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: white;
+  padding: 50px 0;
+}
+footer ul {
+  padding: 0;
+}
+footer li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+footer a {
+  color: white;
+  opacity: 0.7;
+}
+footer p {
+  opacity: 0.7;
+}
+.footer-content {
+  padding: 30px;
+  display: grid;
+  grid-template-columns: 1fr 2fr 2fr;
+  grid-gap: 25px;
+}
+@media (max-width: 960px) {
+  .hero h1 {
+    font-size: 30px;
+  }
+  .hero {
+    padding: 40px;
+  }
+  .hero h2 {
+    font-size: 20px;
+  }
+  .hero h3 {
+    letter-spacing: 0.5em;
+  }
+  .hero a {
+    font-size: 15px;
+  }
+  footer {
+    font-size: 15px;
+  }
 }
