Updated footer css

--- a/src/styles.css
+++ b/src/styles.css
@@ -52,7 +52,7 @@ footer {
   background-size: cover;
   background-repeat: no-repeat;
   color: white;
-  padding: 50px 0;
+  padding: 60px 0;
 }
 footer ul {
   padding: 0;
@@ -70,10 +70,10 @@ footer p {
   opacity: 0.7;
 }
 .footer-content {
-  padding: 30px;
+  padding: 0 50px;
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
-  grid-gap: 25px;
+  grid-gap: 80px;
 }
 @media (max-width: 960px) {
   .hero h1 {
