--- a/src/styles.css
+++ b/src/styles.css
@@ -31,6 +31,7 @@ body {
 }
 .hero h3 {
   font-size: 15px;
+  text-transform: uppercase;
   letter-spacing: 1em;
 }
 .hero a {
@@ -41,6 +42,33 @@ body {
   color: #142850;
   font-size: 20px;
   font-weight: 500;
+}
+main {
+  background-color: white;
+  color: #142850;
+}
+section {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 100px 0;
+}
+.grid-2-columns {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 30px;
+}
+.img-responsive {
+  max-width: 100%;
+}
+.grid-2-columns h3 {
+  font-size: 15px;
+  opacity: 0.8;
+  margin: 0;
+  text-transform: uppercase;
+  letter-spacing: 1em;
+}
+.grid-2-columns h2 {
+  margin: 10px 0;
 }
 footer {
   background-image: linear-gradient(
@@ -69,7 +97,7 @@ footer a {
 footer p {
   opacity: 0.7;
 }
-.footer-content {
+.grid-3-columns-uneven {
   padding: 0 50px;
   display: grid;
   grid-template-columns: 1fr 2fr 2fr;
@@ -93,5 +121,15 @@ footer p {
   }
   footer {
     font-size: 15px;
+  }
+  .grid-2-columns {
+    grid-template-columns: 1fr;
+  }
+  .grid-3-columns-uneven {
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
+  }
+  section {
+    padding: 20px;
   }
 }
