Added embeddedgoogle maps to cards + updated css

--- a/src/styles.css
+++ b/src/styles.css
@@ -62,8 +62,18 @@ section {
   grid-template-columns: 1fr 1fr;
   grid-gap: 30px;
 }
+.card-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 0;
+}
 .img-responsive {
-  max-width: 100%;
+  width: 100%;
+  aspect-ratio: 1 / 1;
+  border-radius: 3px;
+}
+.discover {
+  max-width: 463px;
 }
 .small-uppercase-headline {
   font-size: 15px;
@@ -95,12 +105,7 @@ section {
   margin: 0 0 15px 0;
   opacity: 0.9;
 }
-.card-image {
-  display: block;
-  margin: 40px auto;
-  border: 10px solid #dae1e7;
-  border-radius: 3px;
-}
+
 .link-button {
   background-color: #00909e;
   color: white;
@@ -110,6 +115,9 @@ section {
   text-align: center;
   display: block;
   margin: 0 auto;
+}
+.card-body {
+  margin: 30px 0;
 }
 .card-footer {
   margin-top: 40px;
@@ -176,7 +184,13 @@ footer p {
   .grid-3-columns-even {
     grid-template-columns: 1fr;
   }
+  .card-image {
+    display: none;
+  }
   section {
     padding: 20px;
+  }
+  .card-grid .img-responsive {
+    aspect-ratio: 16 / 9;
   }
 }
