--- a/src/styles.css
+++ b/src/styles.css
@@ -89,6 +89,7 @@ section {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 20px;
+  margin-top: 40px;
 }
 .card {
   background-color: white;
