Added a new section with cards for outdoor acitvities

--- a/src/styles.css
+++ b/src/styles.css
@@ -117,6 +117,9 @@ td {
   padding: 30px;
   border-radius: 3px;
 }
+.card-secondary {
+  background-color: #dae1e7;
+}
 .card h5 {
   margin: 5px 0;
 }
