--- a/src/styles.css
+++ b/src/styles.css
@@ -45,13 +45,10 @@ body {
   font-size: 18px;
   font-weight: 500;
 }
-main {
-  background-color: white;
-  color: #142850;
-}
 section {
   margin: 0 auto;
   padding: 100px;
+  background-color: white;
 }
 .secondary-section {
   background-color: #dae1e7;
@@ -118,6 +115,12 @@ td {
   grid-gap: 20px;
   margin-top: 40px;
 }
+.grid-3-columns-uneven {
+  padding: 0 50px;
+  display: grid;
+  grid-template-columns: 1fr 2fr 2fr;
+  grid-gap: 80px;
+}
 .card {
   background-color: white;
   padding: 30px;
@@ -126,10 +129,8 @@ td {
 .card-secondary {
   background-color: #dae1e7;
 }
+.card h4,
 .card h5 {
-  margin: 5px 0;
-}
-.card h4 {
   margin: 5px 0;
 }
 .card p {
@@ -165,27 +166,20 @@ footer {
   color: white;
   padding: 60px 0;
 }
-footer ul {
+footer ul,
+footer li {
   padding: 0;
 }
 footer li {
   list-style: none;
   margin: 0;
-  padding: 0;
 }
-footer a {
+footer a,
+footer p {
   color: white;
   opacity: 0.7;
 }
-footer p {
-  opacity: 0.7;
-}
-.grid-3-columns-uneven {
-  padding: 0 50px;
-  display: grid;
-  grid-template-columns: 1fr 2fr 2fr;
-  grid-gap: 80px;
-}
+
 @media (max-width: 960px) {
   .hero h1 {
     font-size: 32px;
@@ -200,24 +194,20 @@ footer p {
     letter-spacing: 0.5em;
     font-size: 13px;
   }
-  .hero a {
+  .hero a,
+  footer {
     font-size: 15px;
   }
   .larger-headline {
     font-size: 20px;
   }
-  footer {
-    font-size: 15px;
-  }
-  .grid-2-columns {
+  .grid-2-columns,
+  .grid-3-columns-even,
+  .grid-3-columns-uneven {
     grid-template-columns: 1fr;
   }
   .grid-3-columns-uneven {
-    grid-template-columns: 1fr;
     grid-gap: 10px;
-  }
-  .grid-3-columns-even {
-    grid-template-columns: 1fr;
   }
   .card-image {
     display: none;
