--- a/src/styles.css
+++ b/src/styles.css
@@ -147,6 +147,10 @@ td {
   text-align: center;
   display: block;
   margin: 0 auto;
+  transition: ease-in-out 100ms all;
+}
+.link-button:hover {
+  background-color: #27496d;
 }
 .card-body {
   margin: 30px 0;
